--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">dev intensive</string>
+    <string name="edit_text_hint">Введите текст</string>
+    <string name="bender_image">Bender</string>
+    <string name="send_icon">send icon</string>
 </resources>
