--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="last_name">Фамилия</string>
     <string name="about">О себе</string>
     <string name="repository">Репозиторий</string>
+    <string name="menu_search_title">Поиск</string>
 </resources>
